@@ -1,3 +1,7 @@
+Mon Jun 29 21:01:31 2009  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* complex.c (nucomp_expt): checks exactness.
+
 Mon Jun 29 20:29:11 2009  Tadayoshi Funaba  <tadf@dotrb.org>
 
 	* rational.c (float_to_r): always returns rational.
